src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginBorderContent.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

<Border Height="450" Width="450" CornerRadius="25" Background="yellow">

	<Button Margin="-50,50,50,-50" />

</Border>

</Grid>
